fixed up layout to reduce spacing

--- a/style1.css
+++ b/style1.css
@@ -61,32 +61,34 @@
 
 
 
-    
-
-
-
-
+/*    
 .charts {
   padding: 2px 0;
   -webkit-flex-flow: row wrap;
   display: -ms-flexbox;
-  -ms-flex-flow: row wrap
-/*  display: inline-flex;*/
+  -ms-flex-flow: row wrap;
+  display: inline-flex;
+}
+*/
+
+
+.charts {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+
 }
 
 .chart {
   display: inline-block;
   position: relative;
+  margin-left:10px;
 /*  height: 151px;*/
-  margin-bottom: 20px;
+  /*margin-bottom: 20px;*/
 }
 
-.chart1 {
-  display: inline-block;
-  position: relative;
-/*  height: 151px;*/
-  margin-bottom: 20px;
-}
+
 
 .reset {
   padding-left: 1em;
@@ -223,6 +225,7 @@ top: 1em;
     font-family: 'Glyphicons Halflings';  /* essential for enabling glyphicon */
     content: "\e114";    /* adjust as needed, taken from bootstrap.css */
     float: right;        /* adjust as needed */
+    margin-top: -9px;
 }
 .panel-heading .info-toggle.collapsed:after {
     /* symbol for "collapsed" panels */
@@ -403,19 +406,7 @@ input {
   right:0;
   /*margin-top: -5px;*/
 }
-.circle {
-/*    position: absolute;
-    top:2;
-    left:0;
-    opacity: 0.5;*/
-      margin-left:3px;
-      /*margin-top: 18px;*/
-      width: 14px;
-      height: 14px;
-      -webkit-border-radius: 7px;
-      -moz-border-radius: 7px;
-      border-radius: 7px;
-    }
+
 .dropdown-menu {
   min-width:120px !important;
 
@@ -425,6 +416,45 @@ input {
   width:16px;
   height:16px;
 }
+
+.panel-icon{
+  position: absolute;
+  right:0;
+  top:0;
+  text-align: right;
+  padding-right: 10px;
+  padding-top: 5px;
+  font-size: 24px;
+}
+
+.panel-group{
+  margin-bottom:0 !important;
+}
+
+
+.panel-group .panel + .panel {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.panel .panel-body{
+  padding:5px;
+  margin-bottom: 0 !important;
+}
+
+.panel{
+  margin-bottom:0;
+  padding:0;
+}
+
+.panel-heading{
+  padding-top:7px !important;
+  padding-bottom: 7px !important;
+
+}
+
+
+
 /*----------*/
 
 /*body {
